--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,10 +6,10 @@
       Chatroom
     = csrf_meta_tags
     = csp_meta_tag
+    = action_cable_meta_tag
 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
-
   %body
     = render 'layouts/header'
     .container
