--- a/app/views/chatroom_instances/show.html.haml
+++ b/app/views/chatroom_instances/show.html.haml
@@ -1,3 +1,4 @@
+= javascript_pack_tag 'chatrooms/show'
 = javascript_pack_tag 'chatroom'
 
 .chat
@@ -40,3 +41,6 @@
               - @chatroom_instance.errors.full_messages.each do |message|
                 %li
                   message
+
+#hello
+  %app
